Fixes #313 - Fixes alignment of the error panel. Now it is shown below the fields.

--- a/src/client/app/flogo.transform/components/transform.component.less
+++ b/src/client/app/flogo.transform/components/transform.component.less
@@ -238,6 +238,7 @@
   display:flex;
   display: -webkit-flex;
   align-items: start;
+  flex-direction: column;
 }
 
 .mappings-container__header {
@@ -249,8 +250,7 @@
 }
 
 .mappings-container__error {
-  flex: 0 0 30%;
-  margin-top: 10px;
+  margin-top: 40px;
   overflow: auto;
 }
 
